# gautomata

./: Doxyfile.in  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  gautomata-config.in  gautomata.m4  gautomata.spec.in
gautomata/: Makefile.am  Makefile.in  doxygen_mainpage.h  gautomata.h  measure-nfa.cc  test-bnfta.cc  test-nfa.cc  test-relations.cc  test-tree-relations.cc
gautomata/automaton/: Makefile.am  Makefile.in  automaton.cc  automaton.h  buchi-automaton.cc  buchi-automaton.h  simulation-graph.cc  simulation-graph.h  word-automaton.cc  word-automaton.h
gautomata/bnfa/: Makefile.am  Makefile.in  bnfa.cc  bnfa.h  construct.cc  deterministic.cc  minimize.cc  product.cc
gautomata/bnfta/: Makefile.am  Makefile.in  bnfta.cc  bnfta.h  deterministic.cc  minimize.cc
gautomata/mnfa/: Makefile.am  Makefile.in  mnfa.cc  mnfa.h
gautomata/nfa/: Makefile.am  Makefile.in  deterministic.cc  minimize.cc  nfa.cc  nfa.h  regular-relation.cc  regular-relation.h
gautomata/nfta/: Makefile.am  Makefile.in  nfta.cc  nfta.h  tree-regular-relation.cc  tree-regular-relation.h
gautomata/refnfa/: Makefile.am  Makefile.in  refnfa.cc  refnfa.h
gautomata/refnfta/: Makefile.am  Makefile.in  refnfta.cc  refnfta.h
